--- a/style.css
+++ b/style.css
@@ -74,3 +74,45 @@ p{
     background: var(--primaryColor);
     color: var(--mainWhite);
 }
+
+ /* 
+========================
+Main Nav-bar
+========================
+ */
+
+
+ .main-navbar{
+     background: var(--darkGrey);
+     padding: 0 2rem;
+ }
+
+ .main-navbar li{
+     list-style: none;
+ }
+
+ .main-navbar a{
+     text-transform: capitalize;
+     display: block;
+     padding: 1rem 0;
+     color: var(--primaryColor);
+     letter-spacing: var(--mainSpacing);
+     transition: var(--mainTransition);
+ }
+
+ .main-navbar a:hover{
+     color: var(--mainBlack);
+ }
+
+ @media screen and (min-width:992px){
+     .main-navbar ul{
+         max-width: 1170px;
+         margin: 0 auto;
+         background: var(--mainWhite);
+         display: grid;
+         grid-template-columns: repeat(4,1fr);
+     }
+     .main-navbar{
+         text-align: center;
+     }
+ }
