--- a/style.css
+++ b/style.css
@@ -133,11 +133,6 @@ Hero
      align-items: center;
  }
 
- .hero-banner {
-     /* background: blue;
-     text-align: center; */
- }
-
  .hero-banner p{
      width: 80%;
      max-width: 560px;
@@ -155,3 +150,47 @@ Hero
     background:linear-gradient(rgba(241,80,37,0.75),rgba(0,0,0,0.75)), url('./Images/1.jpeg') center/cover fixed no-repeat;
      }
  }
+
+
+   /* 
+========================
+Cards
+========================
+ */
+
+ .title{
+     text-align: center;
+ }
+ .cards{
+     padding: 4rem 0;
+ }
+
+ .cards-center{
+     width: 80vw;
+     max-width: 1170px;
+     margin: 2rem auto;
+ }
+
+ .card{
+     border: 1px solid var(--darkGrey);
+     margin-bottom: 3rem;
+ }
+
+ .card-info{
+     padding: 1rem;
+ }
+
+.card-footer{
+    background: var(--darkGrey);
+    padding: 0.5rem 1rem;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
+}
+
+.card-footer span{
+    color: var(--primaryColor);
+    transform: scale(1.5);
+}
+
+
